organized, answered some questions

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,47 +45,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Guidelines\n",
+    "## Guidelines - NEED TO ANSWER THESE\n",
     "\n",
-    "Data cleaning and descriptive statistics checkpoint:\n",
+    "TODO: \n",
+    "When and how you will hold out data for model evaluation? Explain\n",
     "\n",
-    "For this assignment, you need to report your initial data exploration. Consider some of the following points as examples. Upload a Notebook with comments describing what you discovered. The emphasis here is not on perfect formatting, but on showing that you have done your due diligence in exploring the data and thinking through the consequences of what you see.\n",
+    "(Tave totally independent data you have never seen before to evaluate model performance at the end.\n",
+    "If you do want to hold out the same data every time, consider fixing a random seed when you make the test-train split.\n",
     "\n",
-    "Before doing any exploration, consider when and how you plan on holding out data for model evaluation. The gold standard is to have totally independent data you have never seen before tucked away so you can evaluate model performance at the end, but there can be many reasons this may not work. Explain your choice. If you do want to hold out the same data every time, consider fixing a random seed when you make the test-train split.  \n",
-    "\n",
-    "Beware that a test set for time-series data is trickier to build than for independent data points.  If you have training data just before and just after the test data point, the correlation between them means the test depends a lot on the training data and hence is a bad test.  At least ensure your test set comes after your training data, and ideally in a separate data-collection session. \n",
-    "\n",
-    "\n",
-    "DONE: Print out a few dozen rows of the data. Is there anything you didn't expect to see? What opportunities for data cleaning and feature engineering may be important? Take care of these things.\n",
+    "Is there any hint that the data you have collected is differently distributed from the actual application of interest?\n",
+    "If so, is there a strategy, such as reweighing samples, that might help?\n",
     "\n",
     "\n",
-    "Plot a few individual time series and do a similar check. Is there anything unbelievable you see?\n",
+    "Action Items\n",
     "\n",
-    "\n",
-    "How much data is missing? Is the distribution of missing data likely different from the distribution of non-missing data? How might you do a meaningful imputation (if needed)? Are there variables that should be dropped? Implement some initial solutions.\n",
-    "\n",
-    "\n",
-    "Is there any hint that the data you have collected is differently distributed from the actual application of interest? If so, is there a strategy, such as reweighing samples, that might help?\n",
-    "Use a histogram or KDE to visualize the distribution of key variables. Consider log-scaling or other scaling of the axes. How should you think about outliers? Is there a natural scaling for certain variables?\n",
-    "\n",
-    "\n",
-    "Use 2D and/or 3D plot scatter plots, histograms, or heat maps to look for important relationships between variables. Consider using significance tests, linear model fits, or correlation matrices to clarify relationships.\n",
-    "\n",
-    "\n",
-    "Does what you see change any of your ideas for what models might be appropriate? Among other things, if your models rely on specific assumptions, is there a way you can check if these assumptions actually hold by looking at the data? If you are using linear models, do the relevant plots look linear? Is there some other scaling where the model assumptions might more nearly hold?\n",
+    "Does what you see change any of your ideas for what models might be appropriate?\n",
+    "Among other things, if your models rely on specific assumptions, is there a way you can check if these assumptions actually hold by looking at the data?\n",
+    "If you are using linear models, do the relevant plots look linear? Is there some other scaling where the model assumptions might more nearly hold?\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['./../data/pvs1\\\\dataset_gps.csv', './../data/pvs1\\\\dataset_gps_mpu_left.csv', './../data/pvs1\\\\dataset_gps_mpu_right.csv', './../data/pvs1\\\\dataset_labels.csv', './../data/pvs1\\\\dataset_settings_left.csv', './../data/pvs1\\\\dataset_settings_right.csv']\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: './../data/'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/gwenjohnson/Desktop/CarKalmanFilter/data_cleaning.ipynb Cell 4\u001b[0m line \u001b[0;36m6\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/gwenjohnson/Desktop/CarKalmanFilter/data_cleaning.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m path \u001b[39m=\u001b[39m dallin_path\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/gwenjohnson/Desktop/CarKalmanFilter/data_cleaning.ipynb#W2sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# get a list of all the files in the directory\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/gwenjohnson/Desktop/CarKalmanFilter/data_cleaning.ipynb#W2sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m pvss \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39;49mlistdir(path)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/gwenjohnson/Desktop/CarKalmanFilter/data_cleaning.ipynb#W2sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m csvs \u001b[39m=\u001b[39m []\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/gwenjohnson/Desktop/CarKalmanFilter/data_cleaning.ipynb#W2sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mfor\u001b[39;00m pvs \u001b[39min\u001b[39;00m pvss:\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './../data/'"
      ]
     }
    ],
@@ -115,12 +108,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Datasets\n",
+    "\n",
+    "For our project, we will use four different datasets and combine them into a single set (joining on the timestamp). Below are what each dataset contains: \n",
+    "\n",
+    "GPS: The following columns are in the GPS dataset: 'timestamp', 'latitude', 'longitude', 'elevation',   'accuracy','bearing', 'speed_meters_per_second', 'provider', 'battery','distance_meters', 'elapsed_time_seconds'. We will drop the following rows from the GPS dataset: 'ageofdgpsdata', \"dgpsid\", \"activity\", \"annotation\", 'hdop', 'vdop', 'pdop', \"satellites\", \"geoidheight\". From the GPS dataset, the only missing values are several missing values from bearing at the beginning of the dataset. We drop these rows. \n",
+    "\n",
+    "Left and Right GPS: The following columns are in the Left and Right GPS: 'timestamp', 'acc_x_dash', 'acc_y_dash', 'acc_z_dash', 'acc_x_above', 'acc_y_above', 'acc_z_above', 'acc_x_below', 'acc_y_below','acc_z_below', 'gyro_x_dash', 'gyro_y_dash', 'gyro_z_dash', 'gyro_x_above', 'gyro_y_above', 'gyro_z_above', 'gyro_x_below','gyro_y_below', 'gyro_z_below', 'temp_dash', 'temp_above', 'temp_below','timestamp_gps', 'latitude', 'longitude', 'speed'. The gyro columns contain rotational data from a gyroscope. We drop the following columns as they do not contribute to our modeling: \"temp_dash\", \"temp_above\", \"temp_below\". There are no missing values. \n",
+    "\n",
+    "Dataset Labels: The following columns are in the labels dataset: 'paved_road', 'unpaved_road', 'dirt_road', 'cobblestone_road', 'asphalt_road', 'no_speed_bump', 'speed_bump_asphalt', 'speed_bump_cobblestone', 'good_road_left', 'regular_road_left','bad_road_left', 'good_road_right', 'regular_road_right','bad_road_right'. From this dataset, we create a new dataframe and a score for quality. The following columns are in our new dataframe: 'road', 'condition', 'bumps', 'quality'. There are no missing values. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#use this to load data \n",
+    "#load \n",
     "pvss = os.listdir(\"data/\")\n",
     "gps = pd.read_csv(\"data/\"+pvss[0])\n",
     "left_gps = pd.read_csv(\"data/\"+pvss[3])\n",
@@ -129,8 +137,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Cleaning Functions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -359,15 +374,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['road', 'condition', 'bumps', 'quality'], dtype='object')"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label_names.columns"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# GPS"
+    "# GPS\n",
+    "\n",
+    "Something we did not expect to see was the distance_meters and elapsed_time_seconds, we are still unsure of what these columns mean and do not plan to use them. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -509,8 +546,7 @@
    ],
    "source": [
     "gps = clean_gps(gps)\n",
-    "gps.head()\n",
-    "# idk exactly what distance_meters or elapsed_time_seconds mean"
+    "gps.head()"
    ]
   },
   {
@@ -705,27 +741,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Left GPS"
+    "# Left and Right GPS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['timestamp', 'acc_x_dash', 'acc_y_dash', 'acc_z_dash', 'acc_x_above',\n",
-      "       'acc_y_above', 'acc_z_above', 'acc_x_below', 'acc_y_below',\n",
-      "       'acc_z_below', 'gyro_x_dash', 'gyro_y_dash', 'gyro_z_dash',\n",
-      "       'gyro_x_above', 'gyro_y_above', 'gyro_z_above', 'gyro_x_below',\n",
-      "       'gyro_y_below', 'gyro_z_below', 'temp_dash', 'temp_above', 'temp_below',\n",
-      "       'timestamp_gps', 'latitude', 'longitude', 'speed'],\n",
-      "      dtype='object')\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -758,12 +781,12 @@
        "      <th>acc_y_below</th>\n",
        "      <th>acc_z_below</th>\n",
        "      <th>...</th>\n",
+       "      <th>gyro_x_above</th>\n",
+       "      <th>gyro_y_above</th>\n",
+       "      <th>gyro_z_above</th>\n",
        "      <th>gyro_x_below</th>\n",
        "      <th>gyro_y_below</th>\n",
        "      <th>gyro_z_below</th>\n",
-       "      <th>temp_dash</th>\n",
-       "      <th>temp_above</th>\n",
-       "      <th>temp_below</th>\n",
        "      <th>timestamp_gps</th>\n",
        "      <th>latitude</th>\n",
        "      <th>longitude</th>\n",
@@ -784,12 +807,12 @@
        "      <td>0.172611</td>\n",
        "      <td>9.793824</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.138446</td>\n",
+       "      <td>0.159659</td>\n",
+       "      <td>-0.072572</td>\n",
        "      <td>-0.041780</td>\n",
        "      <td>0.167302</td>\n",
        "      <td>-0.078110</td>\n",
-       "      <td>35.065355</td>\n",
-       "      <td>33.340132</td>\n",
-       "      <td>31.782640</td>\n",
        "      <td>1.577219e+09</td>\n",
        "      <td>-27.717841</td>\n",
        "      <td>-51.098865</td>\n",
@@ -808,12 +831,12 @@
        "      <td>0.194158</td>\n",
        "      <td>9.842905</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.168963</td>\n",
+       "      <td>0.068106</td>\n",
+       "      <td>0.095274</td>\n",
        "      <td>0.019255</td>\n",
        "      <td>0.304631</td>\n",
        "      <td>0.150771</td>\n",
-       "      <td>34.993471</td>\n",
-       "      <td>33.172402</td>\n",
-       "      <td>31.782640</td>\n",
        "      <td>1.577219e+09</td>\n",
        "      <td>-27.717841</td>\n",
        "      <td>-51.098865</td>\n",
@@ -832,12 +855,12 @@
        "      <td>0.227677</td>\n",
        "      <td>9.888395</td>\n",
        "      <td>...</td>\n",
+       "      <td>-0.136213</td>\n",
+       "      <td>0.159659</td>\n",
+       "      <td>0.156310</td>\n",
        "      <td>-0.377473</td>\n",
        "      <td>-0.122615</td>\n",
        "      <td>0.028701</td>\n",
-       "      <td>34.993471</td>\n",
-       "      <td>33.412017</td>\n",
-       "      <td>31.926408</td>\n",
        "      <td>1.577219e+09</td>\n",
        "      <td>-27.717841</td>\n",
        "      <td>-51.098865</td>\n",
@@ -856,12 +879,12 @@
        "      <td>0.172611</td>\n",
        "      <td>9.871635</td>\n",
        "      <td>...</td>\n",
+       "      <td>-0.075177</td>\n",
+       "      <td>0.037589</td>\n",
+       "      <td>0.064757</td>\n",
        "      <td>0.049773</td>\n",
        "      <td>-0.183650</td>\n",
        "      <td>0.059219</td>\n",
-       "      <td>34.969509</td>\n",
-       "      <td>33.220325</td>\n",
-       "      <td>31.926408</td>\n",
        "      <td>1.577219e+09</td>\n",
        "      <td>-27.717841</td>\n",
        "      <td>-51.098865</td>\n",
@@ -880,12 +903,12 @@
        "      <td>0.200144</td>\n",
        "      <td>9.860862</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.062152</td>\n",
+       "      <td>0.022330</td>\n",
+       "      <td>0.003722</td>\n",
        "      <td>0.141325</td>\n",
        "      <td>-0.046321</td>\n",
        "      <td>0.013442</td>\n",
-       "      <td>34.945548</td>\n",
-       "      <td>33.220325</td>\n",
-       "      <td>31.830563</td>\n",
        "      <td>1.577219e+09</td>\n",
        "      <td>-27.717841</td>\n",
        "      <td>-51.098865</td>\n",
@@ -893,7 +916,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 26 columns</p>\n",
+       "<p>5 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -904,19 +927,19 @@
        "3  1.577219e+09    0.371101    0.164302    9.749668     0.314458     0.230194   \n",
        "4  1.577219e+09    0.390255    0.159514    9.869378     0.344385     0.202660   \n",
        "\n",
-       "   acc_z_above  acc_x_below  acc_y_below  acc_z_below  ...  gyro_x_below  \\\n",
-       "0     9.781861     0.024797     0.172611     9.793824  ...     -0.041780   \n",
-       "1     9.699261     0.024797     0.194158     9.842905  ...      0.019255   \n",
-       "2     9.807000     0.003249     0.227677     9.888395  ...     -0.377473   \n",
-       "3     9.739963     0.005643     0.172611     9.871635  ...      0.049773   \n",
-       "4     9.762708     0.005643     0.200144     9.860862  ...      0.141325   \n",
+       "   acc_z_above  acc_x_below  acc_y_below  acc_z_below  ...  gyro_x_above  \\\n",
+       "0     9.781861     0.024797     0.172611     9.793824  ...      0.138446   \n",
+       "1     9.699261     0.024797     0.194158     9.842905  ...      0.168963   \n",
+       "2     9.807000     0.003249     0.227677     9.888395  ...     -0.136213   \n",
+       "3     9.739963     0.005643     0.172611     9.871635  ...     -0.075177   \n",
+       "4     9.762708     0.005643     0.200144     9.860862  ...      0.062152   \n",
        "\n",
-       "   gyro_y_below  gyro_z_below  temp_dash  temp_above  temp_below  \\\n",
-       "0      0.167302     -0.078110  35.065355   33.340132   31.782640   \n",
-       "1      0.304631      0.150771  34.993471   33.172402   31.782640   \n",
-       "2     -0.122615      0.028701  34.993471   33.412017   31.926408   \n",
-       "3     -0.183650      0.059219  34.969509   33.220325   31.926408   \n",
-       "4     -0.046321      0.013442  34.945548   33.220325   31.830563   \n",
+       "   gyro_y_above  gyro_z_above  gyro_x_below  gyro_y_below  gyro_z_below  \\\n",
+       "0      0.159659     -0.072572     -0.041780      0.167302     -0.078110   \n",
+       "1      0.068106      0.095274      0.019255      0.304631      0.150771   \n",
+       "2      0.159659      0.156310     -0.377473     -0.122615      0.028701   \n",
+       "3      0.037589      0.064757      0.049773     -0.183650      0.059219   \n",
+       "4      0.022330      0.003722      0.141325     -0.046321      0.013442   \n",
        "\n",
        "   timestamp_gps   latitude  longitude     speed  \n",
        "0   1.577219e+09 -27.717841 -51.098865  0.009128  \n",
@@ -925,10 +948,10 @@
        "3   1.577219e+09 -27.717841 -51.098865  0.009128  \n",
        "4   1.577219e+09 -27.717841 -51.098865  0.009128  \n",
        "\n",
-       "[5 rows x 26 columns]"
+       "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,7 +959,6 @@
    "source": [
     "left_gps = clean_acc(left_gps)\n",
     "right_gps = clean_acc(right_gps)\n",
-    "print(left_gps.columns)\n",
     "left_gps.head()"
    ]
   },
@@ -1538,13 +1560,10 @@
     "    fig, ax = plt.subplots(figsize=(10, 6))\n",
     "    grouped_data.pivot(index=variable, columns='quality', values='count').plot(kind='bar', stacked=True, ax=ax)\n",
     "\n",
-    "    # Adding labels and title\n",
     "    plt.title('Quality and '+variable)\n",
     "    plt.xlabel(variable)\n",
     "    plt.ylabel('Count')\n",
     "    plt.xticks(rotation=45)\n",
-    "\n",
-    "    # Display the plot\n",
     "    plt.legend(title='Quality')\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
