--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -17,140 +17,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### TODO: Data Cleaning\n",
-    "\n",
-    "- Decide which columns we want in our final dataset\n",
-    "- Decide if/how we want to split the final datasets\n",
-    "- Decide if/how we combine each of the 9 sets of data\n",
-    "- Visualize/describe data to conform to assignment requirements\n",
-    "- Format ipynb for submission or start a writeup\n",
-    "- Double check the data cleaning\n",
-    "\n",
-    "#### TODO: Kalman Filter\n",
-    "- Make a kalman filter for each column (except lat/long, time)\n",
-    "- Make a kalman filter with control for lat/long\n",
-    "- Make a new dataset with filtered data\n",
-    "- Visualize the filtered data\n",
-    "\n",
-    "#### TODO: HMM / KMeans\n",
-    "- HMM to classify road quality and road type\n",
-    "- HMM to determine speed and direction from lat/long\n",
-    "- HMM to predict speed limit from speed\n",
-    "\n",
-    "#### TODO: ARIMA\n",
-    "- Predict the next speed and direction given previous data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Guidelines - NEED TO ANSWER THESE\n",
-    "\n",
-    "TODO: \n",
-    "When and how you will hold out data for model evaluation? Explain\n",
-    "\n",
-    "(Tave totally independent data you have never seen before to evaluate model performance at the end.\n",
-    "If you do want to hold out the same data every time, consider fixing a random seed when you make the test-train split.\n",
-    "\n",
-    "Is there any hint that the data you have collected is differently distributed from the actual application of interest?\n",
-    "If so, is there a strategy, such as reweighing samples, that might help?\n",
-    "\n",
-    "\n",
-    "Action Items\n",
-    "\n",
-    "Does what you see change any of your ideas for what models might be appropriate?\n",
-    "Among other things, if your models rely on specific assumptions, is there a way you can check if these assumptions actually hold by looking at the data?\n",
-    "If you are using linear models, do the relevant plots look linear? Is there some other scaling where the model assumptions might more nearly hold?\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ".data/PVS 3/dataset_gps.csv\n",
-      ".data/PVS 3/dataset_gps_mpu_right.csv\n",
-      ".data/PVS 3/dataset_labels.csv\n",
-      ".data/PVS 3/dataset_gps_mpu_left.csv\n",
-      ".data/PVS 4/dataset_gps.csv\n",
-      ".data/PVS 4/dataset_gps_mpu_right.csv\n",
-      ".data/PVS 4/dataset_labels.csv\n",
-      ".data/PVS 4/dataset_gps_mpu_left.csv\n",
-      ".data/PVS 5/dataset_gps.csv\n",
-      ".data/PVS 5/dataset_gps_mpu_right.csv\n",
-      ".data/PVS 5/dataset_labels.csv\n",
-      ".data/PVS 5/dataset_gps_mpu_left.csv\n",
-      ".data/PVS 2/dataset_gps.csv\n",
-      ".data/PVS 2/dataset_gps_mpu_right.csv\n",
-      ".data/PVS 2/dataset_labels.csv\n",
-      ".data/PVS 2/dataset_gps_mpu_left.csv\n",
-      ".data/PVS 9/dataset_gps.csv\n",
-      ".data/PVS 9/dataset_gps_mpu_right.csv\n",
-      ".data/PVS 9/dataset_labels.csv\n",
-      ".data/PVS 9/dataset_gps_mpu_left.csv\n",
-      ".data/PVS 7/dataset_gps.csv\n",
-      ".data/PVS 7/dataset_gps_mpu_right.csv\n",
-      ".data/PVS 7/dataset_labels.csv\n",
-      ".data/PVS 7/dataset_gps_mpu_left.csv\n",
-      ".data/PVS 1/dataset_gps.csv\n",
-      ".data/PVS 1/dataset_gps_mpu_right.csv\n",
-      ".data/PVS 1/dataset_labels.csv\n",
-      ".data/PVS 1/dataset_gps_mpu_left.csv\n",
-      ".data/PVS 6/dataset_gps.csv\n",
-      ".data/PVS 6/dataset_gps_mpu_right.csv\n",
-      ".data/PVS 6/dataset_labels.csv\n",
-      ".data/PVS 6/dataset_gps_mpu_left.csv\n",
-      ".data/PVS 8/dataset_gps.csv\n",
-      ".data/PVS 8/dataset_gps_mpu_right.csv\n",
-      ".data/PVS 8/dataset_labels.csv\n",
-      ".data/PVS 8/dataset_gps_mpu_left.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "# DALLIN'S load data\n",
-    "dallin_path = \"./../data/\"\n",
-    "path = '.data/'\n",
-    "\n",
-    "# get a list of all the files in the directory\n",
-    "pvss = os.listdir(path)\n",
-    "\n",
-    "csvs = []\n",
-    "for pvs in pvss:\n",
-    "    files = os.listdir(os.path.join(path, pvs))\n",
-    "    for file in files:\n",
-    "        if file.endswith(\".csv\"):\n",
-    "            csvs.append(os.path.join(path, pvs, file))\n",
-    "\n",
-    "# load the data\n",
-    "# we have the settings but they don't look that useful\n",
-    "for c in csvs:\n",
-    "    print(c)\n",
-    "gps = pd.read_csv(csvs[0])\n",
-    "left_gps = pd.read_csv(csvs[1])\n",
-    "right_gps = pd.read_csv(csvs[2])\n",
-    "df_labels = pd.read_csv(csvs[3])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Datasets\n",
     "\n",
-    "For our project, we will use four different datasets and combine them into a single set (joining on the timestamp). Below are what each dataset contains: \n",
+    "For our project, we will use four different datasets and combine them into a single dataset (joining on the timestamp). The dataset that we found on Kaggle has 9 seperate folders each containing combinations of different runs and drivers. We plan to save at least one of these folders for testing and will use the rest for training and validation. Below we describe the datasets in each of the folders:\n",
     "\n",
     "GPS: The following columns are in the GPS dataset: 'timestamp', 'latitude', 'longitude', 'elevation',   'accuracy','bearing', 'speed_meters_per_second', 'provider', 'battery','distance_meters', 'elapsed_time_seconds'. We will drop the following rows from the GPS dataset: 'ageofdgpsdata', \"dgpsid\", \"activity\", \"annotation\", 'hdop', 'vdop', 'pdop', \"satellites\", \"geoidheight\". From the GPS dataset, the only missing values are several missing values from bearing at the beginning of the dataset. We drop these rows. \n",
     "\n",
     "Left and Right GPS: The following columns are in the Left and Right GPS: 'timestamp', 'acc_x_dash', 'acc_y_dash', 'acc_z_dash', 'acc_x_above', 'acc_y_above', 'acc_z_above', 'acc_x_below', 'acc_y_below','acc_z_below', 'gyro_x_dash', 'gyro_y_dash', 'gyro_z_dash', 'gyro_x_above', 'gyro_y_above', 'gyro_z_above', 'gyro_x_below','gyro_y_below', 'gyro_z_below', 'temp_dash', 'temp_above', 'temp_below','timestamp_gps', 'latitude', 'longitude', 'speed'. The gyro columns contain rotational data from a gyroscope. We drop the following columns as they do not contribute to our modeling: \"temp_dash\", \"temp_above\", \"temp_below\". There are no missing values. \n",
     "\n",
-    "Dataset Labels: The following columns are in the labels dataset: 'paved_road', 'unpaved_road', 'dirt_road', 'cobblestone_road', 'asphalt_road', 'no_speed_bump', 'speed_bump_asphalt', 'speed_bump_cobblestone', 'good_road_left', 'regular_road_left','bad_road_left', 'good_road_right', 'regular_road_right','bad_road_right'. From this dataset, we create a new dataframe and a score for quality. The following columns are in our new dataframe: 'road', 'condition', 'bumps', 'quality'. There are no missing values. "
+    "Dataset Labels: The following columns are in the labels dataset: 'paved_road', 'unpaved_road', 'dirt_road', 'cobblestone_road', 'asphalt_road', 'no_speed_bump', 'speed_bump_asphalt', 'speed_bump_cobblestone', 'good_road_left', 'regular_road_left','bad_road_left', 'good_road_right', 'regular_road_right','bad_road_right'. From this dataset, we create a new dataframe and a score for quality. The following columns are in our new dataframe: 'road', 'condition', 'bumps', 'quality'. There are no missing values. \n"
    ]
   },
   {
