--- a/dallin.ipynb
+++ b/dallin.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "from matplotlib import pyplot as plt\n",
     "import pandas as pd\n",
     "from hmmlearn import hmm\n",
+    "import numpy as np\n",
     "import sys\n",
     "import time\n",
     "sys.path.insert(1, '/mnt/c/Users/dalli/source/acme_senior/_projectV3/CarKalmanFilter/')\n",
@@ -90,7 +91,7 @@
     "    parent = '/mnt/c/Users/dalli/source/acme_senior/_projectV3/CarKalmanFilter/.data'\n",
     "else:\n",
     "    parent = \".data\"\n",
-    "data_dict = cleaner.clean_dict(cleaner.load_data(parent))"
+    "data_dict = cleaner.clean_dict(cleaner.load_data(parent, exclude_test=[\"PVS 7\", \"PVS 8\"], exclude_val=[\"PVS 9\"]))"
    ]
   },
   {
@@ -111,9 +112,6 @@
       " \t\t PVS 4: (1432, 11)\n",
       " \t\t PVS 5: (1263, 11)\n",
       " \t\t PVS 6: (915, 11)\n",
-      " \t\t PVS 7: (1281, 11)\n",
-      " \t\t PVS 8: (1134, 11)\n",
-      " \t\t PVS 9: (999, 11)\n",
       " \t gps_mpu_left: \n",
       " \t\t PVS 1: (144036, 26)\n",
       " \t\t PVS 2: (124684, 26)\n",
@@ -121,9 +119,6 @@
       " \t\t PVS 4: (132492, 26)\n",
       " \t\t PVS 5: (133877, 26)\n",
       " \t\t PVS 6: (96279, 26)\n",
-      " \t\t PVS 7: (128548, 26)\n",
-      " \t\t PVS 8: (123618, 26)\n",
-      " \t\t PVS 9: (91555, 26)\n",
       " \t gps_mpu_right: \n",
       " \t\t PVS 1: (144036, 26)\n",
       " \t\t PVS 2: (124684, 26)\n",
@@ -131,9 +126,6 @@
       " \t\t PVS 4: (132492, 26)\n",
       " \t\t PVS 5: (133877, 26)\n",
       " \t\t PVS 6: (96279, 26)\n",
-      " \t\t PVS 7: (128548, 26)\n",
-      " \t\t PVS 8: (123618, 26)\n",
-      " \t\t PVS 9: (91555, 26)\n",
       " \t labels: \n",
       " \t\t PVS 1: (144036, 14)\n",
       " \t\t PVS 2: (124684, 14)\n",
@@ -141,22 +133,31 @@
       " \t\t PVS 4: (132492, 14)\n",
       " \t\t PVS 5: (133877, 14)\n",
       " \t\t PVS 6: (96279, 14)\n",
+      " \t folders: 6\n",
+      "  val: \n",
+      " \t t_gps: \n",
+      " \t\t PVS 9: (999, 11)\n",
+      " \t gps_mpu_left: \n",
+      " \t\t PVS 9: (91555, 26)\n",
+      " \t gps_mpu_right: \n",
+      " \t\t PVS 9: (91555, 26)\n",
+      " \t labels: \n",
+      " \t\t PVS 9: (91555, 14)\n",
+      " \t folders: 1\n",
+      "  test: \n",
+      " \t t_gps: \n",
+      " \t\t PVS 7: (1281, 11)\n",
+      " \t\t PVS 8: (1134, 11)\n",
+      " \t gps_mpu_left: \n",
+      " \t\t PVS 7: (128548, 26)\n",
+      " \t\t PVS 8: (123618, 26)\n",
+      " \t gps_mpu_right: \n",
+      " \t\t PVS 7: (128548, 26)\n",
+      " \t\t PVS 8: (123618, 26)\n",
+      " \t labels: \n",
       " \t\t PVS 7: (128548, 14)\n",
       " \t\t PVS 8: (123618, 14)\n",
-      " \t\t PVS 9: (91555, 14)\n",
-      " \t folders: 9\n",
-      "  val: \n",
-      " \t t_gps: <class 'NoneType'>\n",
-      " \t gps_mpu_left: <class 'NoneType'>\n",
-      " \t gps_mpu_right: <class 'NoneType'>\n",
-      " \t labels: <class 'NoneType'>\n",
-      " \t folders: 0\n",
-      "  test: \n",
-      " \t t_gps: <class 'NoneType'>\n",
-      " \t gps_mpu_left: <class 'NoneType'>\n",
-      " \t gps_mpu_right: <class 'NoneType'>\n",
-      " \t labels: <class 'NoneType'>\n",
-      " \t folders: 0"
+      " \t folders: 2"
      ]
     }
    ],
@@ -166,73 +167,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filter.add_smoothed_cols(data_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "start = 67000\n",
-    "end = 70000\n",
+    "def build_z_dash(df, type=\"train\", road=\"good_road_left\"):\n",
+    "    \"\"\"\n",
+    "    Builds a 1 column dataset from the given dataframe\n",
     "\n",
-    "test_right = data_dict[\"train\"][\"gps_mpu_right\"][\"PVS 1\"]\n",
-    "test_left = data_dict[\"train\"][\"gps_mpu_left\"][\"PVS 1\"]\n",
-    "test_gps = data_dict[\"train\"][\"t_gps\"][\"PVS 1\"]\n",
-    "test_labels = data_dict[\"train\"][\"labels\"][\"PVS 1\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['paved_road', 'unpaved_road', 'dirt_road', 'cobblestone_road',\n",
-       "       'asphalt_road', 'no_speed_bump', 'speed_bump_asphalt',\n",
-       "       'speed_bump_cobblestone', 'good_road_left', 'regular_road_left',\n",
-       "       'bad_road_left', 'good_road_right', 'regular_road_right',\n",
-       "       'bad_road_right'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_labels.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# hmm data\n",
-    "hmm_train = test_left[['acc_z_dash_smooth']]\n",
-    "# hmm_right = test_right[['timestamp', 'speed', 'acc_x_dash_smooth',\n",
-    "#             'acc_y_dash_smooth', 'acc_z_dash_smooth', 'acc_x_above_smooth',\n",
-    "#             'acc_y_above_smooth', 'acc_z_above_smooth', 'acc_x_below_smooth',\n",
-    "#             'acc_y_below_smooth', 'acc_z_below_smooth']]\n",
-    "# hmm_train = pd.merge(test_left, test_right, on='timestamp', suffixes=('_left', '_right'))\n",
+    "    :param df: dataframe\n",
+    "    :param type: string\n",
     "\n",
-    "X = hmm_train.values\n",
+    "    :return: dataframe with only the acc_z_dash column\n",
+    "    :return: list of lengths\n",
+    "    \"\"\"\n",
+    "    result = None\n",
+    "    lengths = []\n",
+    "    for folder in df[type][\"gps_mpu_right\"].keys():\n",
+    "        pvsi = df[type][\"gps_mpu_right\"][folder]\n",
+    "        labels = df[type][\"labels\"][folder][road]\n",
+    "        indices = labels[labels == 1].index\n",
+    "\n",
+    "        new_data = pvsi[\"acc_z_dash\"].loc[indices]\n",
+    "        lengths.append(len(new_data))\n",
+    "\n",
+    "        if result is None:\n",
+    "            result = new_data\n",
+    "        else:\n",
+    "            # append on the same column\n",
+    "            result = pd.concat([result, new_data], axis=0)\n",
+    "\n",
+    "    return result, lengths\n",
     "\n",
     "\n",
-    "# hmm labels\n",
-    "hmm_true = test_labels[['paved_road', 'unpaved_road', 'dirt_road', 'cobblestone_road', 'asphalt_road']]\n",
-    "# hmm_true['timestamp'] = hmm_train['timestamp']"
+    "train_dict = {\n",
+    "    \"good\": build_z_dash(data_dict, type=\"train\", road=\"good_road_left\"),\n",
+    "    \"regular\": build_z_dash(data_dict, type=\"train\", road=\"regular_road_left\"),\n",
+    "    \"bad\": build_z_dash(data_dict, type=\"train\", road=\"bad_road_left\")\n",
+    "}\n",
+    "\n",
+    "test_dict = {\n",
+    "    \"good\": build_z_dash(data_dict, type=\"test\", road=\"good_road_left\"),\n",
+    "    \"regular\": build_z_dash(data_dict, type=\"test\", road=\"regular_road_left\"),\n",
+    "    \"bad\": build_z_dash(data_dict, type=\"test\", road=\"bad_road_left\")\n",
+    "}"
    ]
   },
   {
@@ -246,55 +224,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting\n",
-      "Fitting took 4.750012200000128 seconds\n"
+      "\n",
+      "Training for good: 0, 1, 2, \n",
+      "Training for regular: 0, 1, 2, \n",
+      "Training for bad: 0, 1, 2, "
      ]
     }
    ],
    "source": [
-    "nc = 3\n",
-    "nf = hmm_train.shape[1]\n",
+    "models = {}\n",
+    "num_models = 3\n",
+    "for key in train_dict.keys():\n",
+    "    data, lengths = train_dict[key]\n",
+    "    # make data an array\n",
+    "    data = data.values.reshape(-1, 1)\n",
+    "    # hmmlearn expects the data to be in a single array:\n",
+    "    # To separate the sequences, it requires the length of each:\n",
+    "    print(\"\\nTraining for\", key, end=\": \")\n",
     "\n",
-    "model = hmm.GaussianHMM(n_components=nc, \n",
-    "                    covariance_type=\"tied\",\n",
-    "                    n_iter=200, \n",
-    "                    tol=1e-4)\n",
-    "                    \n",
-    "print(\"Fitting\")\n",
-    "start = time.perf_counter()\n",
-    "model.fit(X)\n",
-    "print(f\"Fitting took {time.perf_counter() - start} seconds\")\n",
-    "\n",
-    "pi = model.startprob_\n",
-    "A = model.transmat_.T"
+    "    best_log = -np.inf\n",
+    "    for i in range(num_models):\n",
+    "        # Initialize and train the model\n",
+    "        model = hmm.GMMHMM(n_components=6, covariance_type=\"diag\")\n",
+    "        model.fit(data, lengths=lengths)\n",
+    "        # Check the log-likelihood\n",
+    "        log_likelihood = model.monitor_.history[-1]\n",
+    "        if log_likelihood > best_log:\n",
+    "            best_log = log_likelihood\n",
+    "            best_model = model\n",
+    "        print(i, end=\", \")\n",
+    "    models[key] = best_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted_labels = model.predict(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Switches: 1634\n",
+      "Accuracy for good : 0.5454545454545454\n",
+      "Accuracy for regular : 0.4\n",
+      "Accuracy for bad : 0.8333333333333334\n"
+     ]
+    }
+   ],
+   "source": [
+    "# predicted_labels = model.predict(X)\n",
+    "\n",
+    "def predict(mfcc_coeffs):\n",
+    "    \"\"\"\n",
+    "    Predict the word from the given mfcc coefficients\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    mfcc_coeffs : ndarray of shape (M,)\n",
+    "        The mfcc coefficients for the word to be predicted\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    word : str\n",
+    "        The predicted word\n",
+    "    \"\"\"\n",
+    "    # find the log probability density of the given mfcc coefficients\n",
+    "    log_prob = {}\n",
+    "    for key in models.keys():\n",
+    "        log_prob[key] = models[key].score(mfcc_coeffs)\n",
+    "    \n",
+    "    # return the word with the highest probability\n",
+    "    return max(log_prob, key=log_prob.get)\n",
+    "\n",
+    "\n",
+    "\n",
+    "time_window = 10 # seconds\n",
+    "time_window *= 1000\n",
+    "for key in test_dict.keys():\n",
+    "    correct = 0\n",
+    "    incorrect = 0\n",
+    "    test_data, _ = test_dict[key]\n",
+    "\n",
+    "    # iterate over test_data in groups of 10000\n",
+    "    test_data = test_data.values.reshape(-1, 1)\n",
+    "    for i in range(0, len(test_data), time_window):\n",
+    "        item = test_data[i:i+time_window]\n",
+    "        if predict(item) == key:\n",
+    "            correct += 1\n",
+    "        else:\n",
+    "            incorrect += 1\n",
+    "    \n",
+    "    print(\"Accuracy for\", key, \":\", correct/(correct+incorrect))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Switches: 1634"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "Lenght of labels: 144036\n",
       "Ratio: 0.0113443861256908\n"
      ]
@@ -322,7 +368,6 @@
     "print(f\"Ratio: {switches/len(predicted_labels)}\")\n",
     "\n",
     "# plot the predicted labels\n",
-    "import numpy as np\n",
     "start = 20000\n",
     "end = 21000\n",
     "diff = 1000\n",
